--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <img src="TNK Logo.png" width = "300" height = "300">
         </div>
         <div class="center">
-            <button onclick="document.location='menu.html'" type="button" style="vertical-align:middle"><span>Menu</span></button>
-            <button onclick="document.location='checkout.html'" type="button" style="vertical-align:middle"><span>CheckOut</span></button>
+            <button class="btn-main" onclick="document.location='menu.html'" type="button" style="vertical-align:middle"><span>Menu</span></button>
+            <!-- <button class="btn-main" onclick="document.location='checkout.html'" type="button" style="vertical-align:middle"><span>CheckOut</span></button> -->
         </div>
     </div>
     <div class="footer">
