--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesheet.css">
     <title>TNK - Menu</title>
     <link rel="icon" type="image/png" href="TNK Logo.png">
-    <script src="checkout.js" async></script>
+    <script src="store.js" async></script>
 </head>
 <body>
     <div class="container">
@@ -23,7 +23,7 @@
                         <div class="right-div">
                             <span class="shop-item-title">Espresso</span>
                             <span class="shop-item-price">د.إ.‏ 19.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
                         <div class="right-div">
                             <span class="shop-item-title">Double Espresso</span>
                             <span class="shop-item-price">د.إ.‏ 28.00</span>
-                            <button class="shop-item-button"type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main"type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                         <div class="right-div"> 
                             <span class="shop-item-title">Americano</span>
                             <span class="shop-item-price">د.إ.‏ 20.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                         <div class="right-div"> 
                             <span class="shop-item-title">Macchiato</span>
                             <span class="shop-item-price">د.إ.‏ 21.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                         <div class="right-div">  
                             <span class="shop-item-title">Cappuccino</span>
                             <span class="shop-item-price">د.إ.‏ 25.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                         <div class="right-div">
                             <span class="shop-item-title">Flat White</span>
                             <span class="shop-item-price">د.إ.‏ 25.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                         <div class="right-div">
                             <span class="shop-item-title">Cafe Latte</span>
                             <span class="shop-item-price">د.إ.‏ 25.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                         <div class="right-div">
                             <span class="shop-item-title">Mocha</span>
                             <span class="shop-item-price">د.إ.‏ 23.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                         <div class="right-div">
                             <span class="shop-item-title">Creamy Ice Coffee</span>
                             <span class="shop-item-price">د.إ.‏ 29.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                         <div class="right-div">
                             <span class="shop-item-title">Iced Caramel Macchiato</span>
                             <span class="shop-item-price">د.إ.‏ 27.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                         <div class="right-div">
                             <span class="shop-item-title">Cold-Brewed Coffee</span>
                             <span class="shop-item-price">د.إ.‏ 19.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                         <div class="right-div">
                             <span class="shop-item-title">Chocolate-y Iced Mocha</span>
                             <span class="shop-item-price">د.إ.‏ 20.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                         <div class="right-div">
                             <span class="shop-item-title">Chocolate Peanut Butter Iced Coffee</span>
                             <span class="shop-item-price">د.إ.‏ 32.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                         <div class="right-div">
                             <span class="shop-item-title">Caramel Coconut Iced Coffee</span>
                             <span class="shop-item-price">د.إ.‏ 32.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                         <div class="right-div">
                             <span class="shop-item-title">Lemon Iced Tea</span>
                             <span class="shop-item-price">د.إ.‏ 19.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                         <div class="right-div">
                             <span class="shop-item-title">Plain Croissant</span>
                             <span class="shop-item-price">د.إ.‏ 19.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
                         <div class="right-div">
                             <span class="shop-item-title">Pistachio Croissant</span>
                             <span class="shop-item-price">د.إ.‏ 21.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
@@ -203,16 +203,37 @@
                         <div class="right-div">
                             <span class="shop-item-title">Tiramisu</span>
                             <span class="shop-item-price">د.إ.‏ 35.00</span>
-                            <button class="shop-item-button" type="button"><span>ADD TO CART</span></button>
+                            <button class="shop-item-button btn-main" type="button"><span>ADD TO CART</span></button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <div class="center">
-            <button onclick="document.location='index.html'" type="button" style="vertical-align:middle"><span>Home Page</span></button>
-            <button onclick="document.location='checkout.html'" type="button" style="vertical-align:middle"><span>Checkout</span></button>
+        <div class="container-checkout" style="display: none;">
+            <div class="center-text">
+                <h1>CheckOut:</h1>
+            </div>
+            <section class="container content-section">
+                <h2 class="section-header">CART</h2>
+                <div class="cart-row">
+                    <span class="cart-item cart-header cart-column">ITEM</span>
+                    <span class="cart-price cart-header cart-column">PRICE</span>
+                    <span class="cart-quantity cart-header cart-column">QUANTITY</span>
+                </div>
+                <div class="cart-items">
+                </div>
+                <div class="cart-total">
+                    <strong class="cart-total-title">Total</strong>
+                    <span class="cart-total-price">د.إ.‏ 0</span>
+                </div>
+                <button class="btn-purchase btn-main" type="button" style="vertical-align:middle"><span>PURCHASE</span></button>
+            </section>
         </div>
+        <div class="center">
+            <button class="btn-main" onclick="document.location='index.html'" type="button" style="vertical-align:middle"><span>Home Page</span></button>
+            <!-- <button class="btn-main" onclick="document.location='checkout.html'" type="button" style="vertical-align:middle"><span>Checkout</span></button> -->
+        </div>
+        <br><br><br><br>
     </div>
     <div class="footer">
         <h3>All Coded 100% by AboodCode</h3>
